--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "flag-icon-css"]
 	path = flag-icon-css
 	url = https://github.com/lipis/flag-icon-css.git
+[submodule "submodules/browser-logos"]
+	path = submodules/browser-logos
+	url = https://github.com/alrra/browser-logos.git
