--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ addons:
 
 before_install:
   - git clone https://github.com/piwik/piwik-package.git tmp/piwik-package
-  - composer install
+  - git clone https://github.com/matomo-org/searchengine-and-social-list.git tmp/searchengine-and-social-list
+  - git clone https://github.com/matomo-org/device-detector.git tmp/device-detector
 
 script:
  - 'shellcheck *.sh'
