don't commit composer.lock (after all the test should use the latest version)
and change to "matomo/searchengine-and-social-list"

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
+    "config": {
+        "preferred-install": "source"
+    },
     "require-dev": {
     },
     "require": {
-        "piwik/searchengine-and-social-list": "dev-master",
+        "matomo/searchengine-and-social-list": "dev-master",
         "piwik/device-detector": "dev-master"
     }
 }
