--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,2 @@
-beautifulsoup4==4.6.3
-certifi==2018.11.29
-chardet==3.0.4
-idna==2.8
-olefile==0.46
-Pillow==5.3.0
-PyYAML==3.13
-requests==2.21.0
-urllib3==1.24.1
+pkg-resources==0.0.0
+PyYAML==5.1b5
