--- a/tests-ignore.yml
+++ b/tests-ignore.yml
@@ -1,10 +1,7 @@
-placeholder_icon_filenames:
-  brand: unk.png
-  browsers: UNK.png
-  devices: unknown.png
-  os: UNK.png
-  searchEngines: xx.png
-  socials: xx.png
+ignore_that_icon_isnt_square:
+- dist/searchEngines/www.x-recherche.com.png
+- dist/plugins/gears.png
+- dist/brand/Landvo.png
 ignored_source_files:
 - src/flags/un.svg
 - src/flags/gb-wls.svg
@@ -13,214 +10,225 @@ ignored_source_files:
 - src/flags/gb-nir.svg
 - src/flags/es-ct.svg
 - src/flags/xk.svg
-ignore_that_icon_isnt_square:
-- dist/searchEngines/www.x-recherche.com.png
-- dist/plugins/gears.png
-- dist/brand/Landvo.png
 less_important_device_detector_icons:
   brand:
-    - Ainol
-    - Airness
-    - Airties
-    - Allview
-    - Altech_UEC
-    - Amoi
-    - Arnova
-    - ARRIS
-    - Axxion
-    - Barnes_&_Noble
-    - BenQ-Siemens
-    - Bird
-    - Blackview
-    - Blu
-    - Bmobile
-    - Boway
-    - Bravis
-    - Brondi
-    - Bush
-    - Capitel
-    - Captiva
-    - Carrefour
-    - Casio
-    - Changhong
-    - China_Mobile
-    - Coby_Kyros
-    - Cowon
-    - Cube
-    - CUBOT
-    - Datang
-    - Dbtel
-    - Desay
-    - Dicam
-    - DNS
-    - Doogee
-    - Doov
-    - Dopod
-    - Dune_HD
-    - E-Boda
-    - EBEST
-    - ECS
-    - Elephone
-    - Energy_Sistem
-    - Ericy
-    - Eton
-    - Explay
-    - Ezio
-    - Ezze
-    - Fairphone
-    - Foxconn
-    - Garmin-Asus
-    - Gateway
-    - GOCLEVER
-    - Goly
-    - Grape
-    - Hasee
-    - Hi-Level
-    - Hisense
-    - Homtom
-    - Hosin
-    - i-Joy
-    - i-mate
-    - iBall
-    - iKoMo
-    - iNew
-    - Infinix
-    - Inkti
-    - Innostream
-    - Intex
-    - iOcean
-    - iTel
-    - Jiayu
-    - K-Touch
-    - Kiano
-    - Kingsun
-    - Komu
-    - Konka
-    - Koobee
-    - KOPO
-    - Koridy
-    - KT-Tech
-    - Kumai
-    - LCT
-    - LeEco
-    - Lemhoov
-    - Lenco
-    - Lexand
-    - Lexibook
-    - Lingwin
-    - Logicom
-    - M.T.T.
-    - Majestic
-    - Mecer
-    - Mediacom
-    - MEEG
-    - Memup
-    - MEU
-    - Miray
-    - MIXC
-    - MLLED
-    - Mobistel
-    - Modecom
-    - Mofut
-    - Mpman
-    - Netgear
-    - Newgen
-    - NextBook
-    - Noain
-    - Nomi
-    - Nous
-    - Opsson
-    - Ouki
-    - OUYA
-    - Overmax
-    - Oysters
-    - Pentagram
-    - phoneOne
-    - Pioneer
-    - Ployer
-    - Point_of_View
-    - Pomp
-    - Positivo
-    - PPTV
-    - Prestigio
-    - Primepad
-    - ProScan
-    - PULID
-    - Qilive
-    - Qtek
-    - Ramos
-    - RCA_Tablets
-    - Readboy
-    - Rikomagic
-    - Roku
-    - Rover
-    - Sanei
-    - Sendo
-    - Senseit
-    - Skyworth
-    - Smartisan
-    - Star
-    - Stonex
-    - Storex
-    - Sumvision
-    - SunVan
-    - SuperSonic
-    - Supra
-    - Symphony
-    - TB_Touch
-    - Telenor
-    - Tesco
-    - ThL
-    - TIANYU
-    - Top_House
-    - Toplux
-    - Trevi
-    - Turbo-X
-    - TVC
-    - Uniscope
-    - Unknown
-    - Unowhy
-    - UTStarcom
-    - Vastking
-    - Vinsoc
-    - Vitelcom
-    - Vizio
-    - VK_Mobile
-    - Voto
-    - Walton
-    - Web_TV
-    - WellcoM
-    - Wexler
-    - Wonu
-    - Xolo
-    - Ytone
-    - Yusun
-    - Zeemi
-    - Zuum
+  - Ainol
+  - Airness
+  - Airties
+  - Allview
+  - Altech_UEC
+  - Amoi
+  - Arnova
+  - ARRIS
+  - Ask
+  - Axxion
+  - Barnes_&_Noble
+  - BenQ-Siemens
+  - Bird
+  - Blackview
+  - Blu
+  - Bluegood
+  - Bmobile
+  - Boway
+  - Bravis
+  - Brondi
+  - Bush
+  - Capitel
+  - Captiva
+  - Carrefour
+  - Casio
+  - Changhong
+  - China_Mobile
+  - Coby_Kyros
+  - Cowon
+  - Cube
+  - CUBOT
+  - Datang
+  - Dbtel
+  - Desay
+  - Dicam
+  - DNS
+  - Doogee
+  - Doov
+  - Dopod
+  - Dune_HD
+  - E-Boda
+  - EBEST
+  - ECS
+  - Elephone
+  - Energy_Sistem
+  - Ericy
+  - Eton
+  - Explay
+  - Ezio
+  - Ezze
+  - Fairphone
+  - Forstar
+  - Foxconn
+  - Garmin-Asus
+  - Gateway
+  - Geotel
+  - GOCLEVER
+  - Goly
+  - Grape
+  - Hasee
+  - Hi-Level
+  - Hisense
+  - Homtom
+  - Hosin
+  - i-Joy
+  - i-mate
+  - iBall
+  - iKoMo
+  - iNew
+  - Infinix
+  - Inkti
+  - Innostream
+  - Intex
+  - iOcean
+  - iTel
+  - Jiayu
+  - K-Touch
+  - Kiano
+  - Kingsun
+  - Komu
+  - Konka
+  - Koobee
+  - KOPO
+  - Koridy
+  - KRONO
+  - KT-Tech
+  - Kumai
+  - LCT
+  - LeEco
+  - Lemhoov
+  - Lenco
+  - Leotec
+  - Lexand
+  - Lexibook
+  - Lingwin
+  - Logicom
+  - M.T.T.
+  - Majestic
+  - Mecer
+  - Mediacom
+  - MEEG
+  - Memup
+  - MEU
+  - Miray
+  - MIXC
+  - MLLED
+  - Mobistel
+  - Modecom
+  - Mofut
+  - Mpman
+  - Netgear
+  - Newgen
+  - NextBook
+  - Noain
+  - Nomi
+  - Nous
+  - Opsson
+  - Ouki
+  - OUYA
+  - Overmax
+  - Oysters
+  - Pentagram
+  - phoneOne
+  - Pioneer
+  - Ployer
+  - Point_of_View
+  - Pomp
+  - Positivo
+  - PPTV
+  - Prestigio
+  - Primepad
+  - ProScan
+  - PULID
+  - Qilive
+  - Qtek
+  - Ramos
+  - RCA_Tablets
+  - Readboy
+  - Rikomagic
+  - Roku
+  - Rover
+  - Sanei
+  - Sendo
+  - Senseit
+  - Skyworth
+  - Smartisan
+  - Star
+  - Stonex
+  - Storex
+  - Sumvision
+  - SunVan
+  - SuperSonic
+  - Supra
+  - Symphony
+  - TB_Touch
+  - Telenor
+  - Tesco
+  - ThL
+  - TIANYU
+  - Top_House
+  - Toplux
+  - Trevi
+  - Turbo-X
+  - TVC
+  - Uniscope
+  - Unknown
+  - Unowhy
+  - UTStarcom
+  - Vastking
+  - Vinsoc
+  - Vitelcom
+  - Vizio
+  - VK_Mobile
+  - Voto
+  - Walton
+  - Web_TV
+  - WellcoM
+  - Wexler
+  - Wonu
+  - Xolo
+  - 'Yes'
+  - Ytone
+  - Yu
+  - Yusun
+  - Zeemi
+  - Zuum
   browsers:
-    - AF
-    - CX
-    - CS
-    - DB
-    - DO
-    - EB
-    - LU
-    - OD
-    - SC
-    - SN
-    - SR
-    - VB
-    - WT
-    - XI
+  - AF
+  - CS
+  - CX
+  - DB
+  - DO
+  - EB
+  - LU
+  - OD
+  - SC
+  - SN
+  - SR
+  - VB
+  - WT
+  - XI
   os:
-    - BMP
-    - INF
-    - MCD
-    - MLD
-    - MTK
-    - RZD
-    - SYS
-    - S40
-    - S60
-    - SY3
-    - WTV
+  - BMP
+  - INF
+  - MCD
+  - MLD
+  - MTK
+  - RZD
+  - S40
+  - S60
+  - SY3
+  - SYS
+  - WTV
+placeholder_icon_filenames:
+  brand: unk.png
+  browsers: UNK.png
+  devices: unknown.png
+  os: UNK.png
+  searchEngines: xx.png
+  socials: xx.png
