unify file naming

--- a/tests-ignore.yml
+++ b/tests-ignore.yml
@@ -29,7 +29,7 @@ less_important_device_detector_icons:
   - Assistant
   - AVH
   - Axxion
-  - Barnes_&_Noble
+  - Barnes_Noble
   - BenQ-Siemens
   - Bird
   - Black_Fox
@@ -133,7 +133,7 @@ less_important_device_detector_icons:
   - Lingwin
   - Logicom
   - Lumus
-  - M.T.T.
+  - M_T_T_
   - Majestic
   - Maze
   - Mecer
@@ -160,7 +160,7 @@ less_important_device_detector_icons:
   - Noain
   - Nomi
   - Nous
-  - O+
+  - O_
   - Opsson
   - Ouki
   - OUYA
