use device detector 4

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
     },
     "require": {
         "matomo/searchengine-and-social-list": "dev-master",
-        "piwik/device-detector": "dev-master"
+        "matomo/device-detector": "dev-master"
     }
 }
