--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "browser-logos": "alrra/browser-logos",
-    "flag-icon-css": "lipis/flag-icon-css"
+    "browser-logos": "github:Findus23/browser-logos",
+    "flag-icons": "github:lipis/flag-icon-css"
   }
 }
