--- a/.github/workflows/convertimages.yml
+++ b/.github/workflows/convertimages.yml
@@ -112,8 +112,8 @@ jobs:
       - name: Push changes
         id: push
         run: |
-          git diff
-          if [[ $( git diff --numstat dist ) ]]
+          git add dist
+          if [[ $( git diff --numstat HEAD dist ) ]]
           then
             if [[ ! ${{ steps.vars.outputs.islocalbranch }} ]]
             then
