Adds some new icons for search engines and social networks (#37)
* Adds some new icons for search engines

* test

* ensure new files are detected by generation script

* Generated image files

* Adds some missing icons for social networks

* Generated image files

---------

Co-authored-by: innocraft-automation <innocraft-automation@users.noreply.github.com>

--- a/.github/workflows/convertimages.yml
+++ b/.github/workflows/convertimages.yml
@@ -112,7 +112,8 @@ jobs:
       - name: Push changes
         id: push
         run: |
-          if [[ $( git diff --numstat dist ) ]]
+          git add dist
+          if [[ $( git diff --numstat HEAD dist ) ]]
           then
             if [[ ! ${{ steps.vars.outputs.islocalbranch }} ]]
             then
